--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "rm package-lock.json; DB=localDB nodemon server.js --watch server.js --watch next.config.js  --watch package.json  --watch .babelrc --watch server.js",
-    "prod": "next build; NODE_ENV=production node server.js",
+    "prod": "next build; NODE_ENV=production node server.js"
   },
   "author": "site",
   "license": "ISC",
